syntax = "proto3";

import "payments.proto";

service PaymentService {
    rpc BulkPaymentCreate (stream BulkPaymentCreateRequest) returns (stream BulkPaymentCreateResponse);
}