syntax = "proto3";

import "status.proto";

message BulkPaymentCreateRequest {
    int32 payer_id = 1;
    int32 payee_id = 2;
    int32 amount = 3;
}

message BulkPaymentCreateResponse {
    Status status = 1;
}